gap bug fixed

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,20 +1,20 @@
 .catalog {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  justify-items: center;
+  grid-template-columns: repeat(4, $card-width);
+  justify-content: center;
   max-width: 944px;
   margin: 0 auto;
   gap: 48px;
 
   @media screen and (max-width: 1024px) {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, $card-width);
   }
 
   @media screen and (max-width: 768px) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, $card-width);
   }
   @media screen and (max-width: 488px) {
-    grid-template-columns: 1fr;
+    grid-template-columns: $card-width;
   }
 
   &__card {
